--- a/index.html
+++ b/index.html
@@ -3,39 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-
+    <title>99 Bottles of Milk</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Page</h1>
-    </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
+    <div id="songContainer">
+      
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
